# core

./: .gitignore  Cargo.toml  README.md  README_zhCN.md  bun-fetch.d.ts  config.toml  deny.toml  download.ts  fast-down.code-workspace  formatFileSize.ts  getUrlInfo.ts  index.test.ts  index.ts  package.json  release.toml  sha256.txt  tsconfig.json  url.txt  worker.ts  workerpool.ts
.github/workflows/: build.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  args_parse.rs  clean.rs  download.rs  draw_progress.rs  fmt_progress.rs  fmt_size.rs  list.rs  main.rs  persist.rs  str_to_progress.rs  update.rs
crates/cli/src/fmt/: mod.rs  size.rs  time.rs
crates/cli/src/progress/: convert.rs  draw.rs  invert.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/base/: event.rs  merge_progress.rs  mod.rs  progress.rs  pusher.rs  source.rs  total.rs
crates/core/src/common/: mod.rs  url.rs
crates/core/src/core/: auto.rs  download_file.rs  file_writer.rs  macros.rs  mock.rs  mod.rs  multi.rs  prefetch.rs  single.rs
crates/core/src/file/: pusher.rs
crates/core/src/reqwest/: fetcher.rs  prefetch.rs
crates/core/src/utils/: file.rs
crates/core/src/writer/: file.rs  mod.rs
crates/fast-down/: Cargo.toml  README.md  curl.rs
crates/fast-down-api/: Cargo.toml  README.md
crates/fast-down-api/src/: config.rs  event.rs  lib.rs
crates/fast-down-api/src/core/: download.rs  mod.rs  prefetch.rs
crates/fast-down-api/src/utils/: build_header.rs  gen_path.rs  mod.rs
crates/fast-down-ffi/: Cargo.toml  README.md
crates/fast-down-ffi/src/: config.rs  download.rs  error.rs  event.rs  lib.rs
crates/fast-down/src/: lib.rs  proxy.rs  url_info.rs
crates/fast-down/src/curl/: mod.rs  puller.rs  worker.rs
crates/fast-down/src/down/: mod.rs  options.rs  pf.rs
crates/fast-down/src/downloader/: entry.rs  invert.rs  mod.rs  puller.rs  send_err.rs
crates/fast-down/src/http/: content_disposition.rs  manual_redirect.rs  mod.rs  prefetch.rs  puller.rs  test.rs
crates/fast-down/src/reqwest/: mod.rs  prefetch.rs  puller.rs  reader.rs
crates/fast-down/src/reqwest_middleware/: mod.rs  prefetch.rs  puller.rs
crates/fast-down/src/utils/: config.rs  content_pisposition.rs  fast_puller.rs  getifaddrs.rs  mod.rs  network.rs  puller.rs  unique_path.rs
crates/fast-io/: Cargo.toml
crates/fast-io/src/: lib.rs
crates/fast-io/src/base/: reader.rs
crates/fast-io/src/core/: macros.rs  mod.rs  multi.rs
crates/fast-io/src/file/: writer.rs
crates/fast-io/src/reqwest/: prefetch.rs
crates/fast-pull/: Cargo.toml  README.md
crates/fast-pull/src/: lib.rs
crates/fast-pull/src/base/: data.rs  event.rs  invert.rs  merge.rs  merge_progress.rs  mod.rs  progress.rs  progress_ext.rs  puller.rs  pusher.rs  total.rs  traits.rs  url.rs  writer.rs
crates/fast-pull/src/cache/: direct.rs  merge.rs  mod.rs  pusher.rs  seq.rs
crates/fast-pull/src/core/: handle.rs  macros.rs  mock.rs  mod.rs  multi.rs  single.rs  utils.rs
crates/fast-pull/src/file/: cache_std.rs  mmap.rs  mod.rs  pusher.rs  std.rs  writer.rs
crates/fast-pull/src/mem/: mod.rs  pusher.rs
crates/fast-pull/src/reqwest/: mod.rs  prefetch.rs  puller.rs
crates/fast-steal/: Cargo.toml  README.md
crates/fast-steal/src/: executor.rs  lib.rs  main.rs  split_task.rs  steal_task.rs  task.rs  task_list.rs  task_queue.rs
crates/fast-steal/src/tokio/: executor.rs  mod.rs  runner.rs
crates/gui/: Cargo.toml
crates/gui/src/: args.rs  clean.rs  home_page.rs  main.rs  manager.rs  persist.rs  update.rs
crates/gui/src/fmt/: time.rs
crates/gui/src/path/: find_available_path.rs  mod.rs
crates/gui/src/progress/: add_blank.rs  convert.rs  invert.rs  mod.rs
crates/gui/ui/: app-window.slint  download-item.slint  home.slint
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: CNAME  index.html
fast-down/: Cargo.toml
fast-down-cli/: Cargo.toml
fast-down-cli/src/: args_parse.rs  build_headers.rs  database.rs  default_sec_ch_ua.txt  draw_progress.rs  fmt.rs  fmt_time.rs  lib.rs  main.rs  overlap.rs  persist.rs  reverse_progress.rs  str_to_progress.rs
fast-down-gui/: Cargo.toml
fast-down-gui/ui/: app-window.slint  app-window.slint.bak
fast-down-lib/: Cargo.toml
fast-down-lib/src/: display_progress.rs  download.rs  download_multi_threads.rs  download_single_thread.rs  event.rs  format_file_size.rs  lib.rs  merge_progress.rs  progress.rs  total.rs
fast-down/src/: display_progress.rs  download.rs  download_multi_threads.rs  download_single_thread.rs  lib.rs  merge_progress.rs  prefetch.rs  progress.rs
fast-down/src/base/: event.rs  fmt_progress.rs  merge_progress.rs  mod.rs  progress.rs  total.rs
fast-down/src/core/: auto.rs  download_file.rs  file_writer.rs  mod.rs  multi.rs  prefetch.rs  single.rs  writer.rs
fast-down/src/dl/: block_lock.rs  file_writer.rs  mod.rs  multi.rs  read_response.rs  single.rs  write.rs
fast-down/src/fmt/: mod.rs  progress.rs
locales/: en.yml  zh-CN.yml  zh-TW.yml
old/: download.ts  fileSha256.ts  index.test.ts  index.ts  worker.ts
src/: display_progress.rs  download.rs  download_multi_threads.rs  download_multi_threads.rs.bak  download_progress.rs  download_single_thread.rs  format_file_size.rs  get_chunks.rs  get_url_info.rs  lib.rs  main.rs  merge_progress.rs  progress.rs  progresses_remain.rs  progresses_size.rs  scan_file.rs  total.rs
src/base/: event.rs  merge_progress.rs  mod.rs  progress.rs  pusher.rs  total.rs  url.rs
src/common/: mod.rs  url.rs
src/core/: mock.rs  mod.rs  multi.rs  single.rs
src/file/: mod.rs  writer.rs
src/reqwest/: mod.rs  prefetch.rs  reader.rs
