[workspace]
resolver = "3"
members = ["crates/fast-down", "crates/fast-pull", "crates/fast-steal"]

[workspace.package]
authors = ["share121 <me@s121.top>", "Cyan Changes <contact@cyans.me>"]
edition = "2024"
homepage = "https://github.com/fast-down/core"
repository = "https://github.com/fast-down/core"
license = "MIT"

[workspace.dependencies]
bytes = "1.11.1"
crossfire = "3.1.3"
fast-pull = { path = "crates/fast-pull", version = "3.7.5" }
fast-steal = { path = "crates/fast-steal", version = "6.4.4" }
futures = "0.3.32"
parking_lot = "0.12.5"
thiserror = "2.0.18"
url = "2.5.8"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# restriction = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
