[workspace]
resolver = "3"
members = ["crates/fast-down", "crates/fast-pull", "crates/fast-steal"]

[workspace.package]
authors = ["share121 <me@s121.top>", "Cyan Changes <contact@cyans.me>"]
edition = "2024"
homepage = "https://github.com/fast-down/core"
repository = "https://github.com/fast-down/core"
license = "MIT"

[workspace.dependencies]
bytes = "1.7.1"
crossfire = "3.0"
fast-pull = { path = "crates/fast-pull", version = "4.0" }
fast-steal = { path = "crates/fast-steal", version = "6.5" }
futures = "0.3"
parking_lot = "0.12"
thiserror = "2.0"
url = "2.5.8"
tokio = "1.39"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# restriction = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
