[package]
name = "fast-down-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
description = "超级快的下载器命令行界面"
documentation = "https://docs.rs/fast-down-cli"
homepage = "https://github.com/share121/fast-down"
keywords = ["downloader", "parallel", "thread", "concurrency", "performance"]
categories = ["downloader", "concurrency"]

[dependencies]
fast-down = { path = "../fast-down" }
clap = { version = "4.5.36", features = ["derive"] }
color-eyre = { workspace = true }
reqwest = { workspace = true }
sha2 = "0.10.8"
rusqlite = "0.34.0"

[[bin]]
name = "fast-down"
path = "src/main.rs"
