[package]
name = "fast-down-cli"
version = "1.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
description = "超级快的下载器命令行界面"
documentation = "https://docs.rs/fast-down-cli"
homepage = "https://github.com/share121/fast-down"
keywords = ["downloader", "parallel", "thread", "concurrency", "performance"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
fast-down = "0.1.1"
clap = { version = "4.5.36", features = ["derive"] }
color-eyre = { workspace = true }
reqwest = { workspace = true }

[[bin]]
name = "fast-down"
path = "src/main.rs"
