[package]
name = "fast-down-cli"
version = "1.7.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
description = "超级快的下载器命令行界面"
documentation = "https://docs.rs/fast-down-cli"
homepage = "https://github.com/share121/fast-down"
keywords = ["downloader", "parallel", "thread", "concurrency", "performance"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
fast-down = { path = "../fast-down", version = "1.5.0", features = ["file"] }
clap = { version = "4.5.36", features = ["derive"] }
color-eyre = { workspace = true }
reqwest = { workspace = true }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
path-clean = "1.0.1"
ctrlc = "3.4.6"
url = { version = "2.5.4", default-features = false }
config = { version = "0.15.11", default-features = false, features = [
  "toml",
  "convert-case",
] }
crossterm = "0.29.0"

[[bin]]
name = "fd"
path = "src/main.rs"
