[package]
name = "fast-down-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "超级快的下载器核心库"

[dependencies]
color-eyre = { workspace = true }
content_disposition = "0.4.0"
crossbeam-channel = "0.5.14"
fast-steal = "2.4.0"
reqwest = { workspace = true }
sanitize-filename = "0.6.0"
urlencoding = "2.1.3"

[dev-dependencies]
mockito = "1.6.1"
tempfile = "3.18.0"
