[package]
name = "fast-down"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
description = "超级快的下载器核心库"
documentation = "https://docs.rs/fast-down"
homepage = "https://github.com/share121/fast-down"
keywords = ["downloader", "parallel", "thread", "concurrency", "performance"]
categories = ["network-programming", "concurrency"]

[dependencies]
bytes = "1.10.1"
color-eyre = { workspace = true }
content_disposition = "0.4.0"
crossbeam-channel = "0.5.14"
crossbeam-skiplist = { version = "0.1.3", optional = true }
fast-steal = "2.6.0"
memmap2 = { version = "0.9.5", optional = true }
num-traits = "0.2.19"
reqwest = { workspace = true }
sanitize-filename = "0.6.0"
urlencoding = "2.1.3"

[dev-dependencies]
mockito = "1.6.1"
tempfile = "3.18.0"

[features]
memmap2 = ["dep:memmap2"]
crossbeam-skiplist = ["dep:crossbeam-skiplist"]
file = ["memmap2", "crossbeam-skiplist"]
