[package]
name = "fast-down"
version = "1.5.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
description = "超级快的下载器核心库"
documentation = "https://docs.rs/fast-down"
homepage = "https://github.com/share121/fast-down"
keywords = ["downloader", "parallel", "thread", "concurrency", "performance"]
categories = ["network-programming", "concurrency"]

[dependencies]
bytes = { version = "1.10.1", default-features = false }
color-eyre = { workspace = true }
content_disposition = "0.4.0"
fast-steal = "4.0.0"
crossbeam-channel = { version = "0.5.14", default-features = false }
memmap2 = { version = "0.9.5", optional = true }
reqwest = { workspace = true }
sanitize-filename = "0.6.0"
urlencoding = "2.1.3"

[dev-dependencies]
mockito = "1.6.1"
tempfile = "3.18.0"

[features]
default = ["file"]
file = ["memmap2"]
memmap2 = ["dep:memmap2"]
