[package]
name = "fast-down-cli"
version = "2.0.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
description = "超级快的下载器命令行界面"
documentation = "https://docs.rs/fast-down-cli"
homepage = "https://github.com/share121/fast-down"
keywords = ["downloader", "parallel", "thread", "concurrency", "performance"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
fast-down = { workspace = true }
clap = { version = "4.5.36", features = ["derive"] }
color-eyre = { workspace = true }
reqwest = { workspace = true }
tokio = { version = "1.46.1", default-features = false, features = [
  "io-std",
  "rt-multi-thread",
] }
path-clean = "1.0.1"
ctrlc = "3.4.6"
url = "2.5.4"
config = { version = "0.15.11", default-features = false, features = [
  "toml",
  "convert-case",
] }
crossterm = "0.29.0"
mimalloc = "0.1.46"
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }

[[bin]]
name = "fast"
path = "src/main.rs"
