[package]
name = "fast-down-cli"
version = "2.0.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
description = "超级快的下载器命令行界面"
documentation = "https://docs.rs/fast-down-cli"
homepage = "https://github.com/share121/fast-down"
keywords = ["downloader", "parallel", "thread", "concurrency", "performance"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
fast-down = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
path-clean = { workspace = true }
ctrlc = { workspace = true }
url = { workspace = true }
config = { workspace = true }
mimalloc = { workspace = true }
tokio-rusqlite = { workspace = true }
crossterm = "0.29.0"

[[bin]]
name = "fast"
path = "src/main.rs"
