[package]
name = "fast-down-cli"
version = "2.0.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
description = "超级快的下载器命令行界面"
documentation = "https://docs.rs/fast-down-cli"
homepage = "https://github.com/share121/fast-down"
keywords = ["downloader", "parallel", "thread", "concurrency", "performance"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
fast-down = { workspace = true, features = ["reqwest"] }
clap = { workspace = true }
color-eyre = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
path-clean = { workspace = true }
ctrlc = { workspace = true }
url = { workspace = true }
config = { workspace = true }
mimalloc = { workspace = true }
rust-i18n = { workspace = true }
sys-locale = { workspace = true }
rkyv = { workspace = true }
dashmap = { workspace = true }
crossterm = "0.29.0"

[package.metadata.i18n]
available-locales = ["en", "zh-TW", "zh-CN"]
default-locale = "en"

[[bin]]
name = "fast"
path = "src/main.rs"
