[package]
name = "fast-down"
version = "2.0.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
description = "超级快的下载器核心库"
documentation = "https://docs.rs/fast-down"
homepage = "https://github.com/share121/fast-down"
keywords = ["downloader", "parallel", "thread", "concurrency", "performance"]
categories = ["network-programming", "concurrency"]

[dependencies]
bytes = "1.10.1"
content_disposition = "0.4.0"
fast-steal = "5.0.2"
memmap2 = { version = "0.9.7", optional = true }
reqwest = { workspace = true }
sanitize-filename = "0.6.0"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = [
  "fs",
  "macros",
], default-features = false }
async-channel = { workspace = true }
urlencoding = "2.1.3"

[dev-dependencies]
mockito = "1.7.0"
tempfile = { workspace = true }

[features]
default = ["file"]
file = ["memmap2"]
memmap2 = ["dep:memmap2"]
