[package]
name = "fast-down"
version = "3.8.0"
authors.workspace = true
edition.workspace = true
description = "Download everything fast"
documentation = "https://docs.rs/fast-down"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["concurrency", "download", "fast", "parallel"]
categories = ["asynchronous", "concurrency", "network-programming", "no-std"]

[dependencies]
bytes.workspace = true
fast-pull.workspace = true
futures.workspace = true
getifaddrs = { version = "0.6.0", optional = true }
httpdate = { version = "1.0.3", optional = true }
parking_lot = { workspace = true, optional = true }
reqwest = { version = "0.13.2", default-features = false, optional = true }
sanitize-filename = { version = "0.6.0", optional = true }
serde = { version = "1.0.228", features = ["rc", "serde_derive"], optional = true }
thiserror = { workspace = true, optional = true }
tokio = { version = "1.49.0", default-features = false }
url.workspace = true
urlencoding = { version = "2.1.3", optional = true }

[dev-dependencies]
mockito = "1.7.2"

[features]
http = ["dep:parking_lot", "dep:thiserror", "dep:urlencoding"]
reqwest = ["dep:httpdate", "dep:reqwest", "http"]
sanitize-filename = ["dep:sanitize-filename"]
serde = ["dep:serde", "url/serde"]
utils = ["dep:getifaddrs", "reqwest", "reqwest/default-tls"]
