[package]
name = "fast-down"
version = "4.0.5"
authors.workspace = true
edition.workspace = true
description = "Download everything fast"
documentation = "https://docs.rs/fast-down"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["concurrency", "download", "fast", "parallel"]
categories = ["asynchronous", "concurrency", "network-programming", "no-std"]

[dependencies]
tokio.workspace = true
bytes.workspace = true
fast-pull.workspace = true
futures.workspace = true
httpdate = { version = "1.0", optional = true }
parking_lot = { workspace = true, optional = true }
path_helper = { version = "0.1", features = ["sanitize"], optional = true }
serde = { version = "1.0.156", features = [
    "rc",
    "serde_derive",
], optional = true }
thiserror = { workspace = true, optional = true }
url.workspace = true
urlencoding = { version = "2.0", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
getifaddrs = { version = "0.6", optional = true }
reqwest = { version = "0.13", default-features = false, optional = true }

[dev-dependencies]
mockito = "1.7"

[features]
http = ["dep:parking_lot", "dep:thiserror", "dep:urlencoding"]
reqwest = ["dep:httpdate", "dep:reqwest", "http"]
sanitize-filename = ["dep:path_helper"]
serde = ["dep:serde", "url/serde"]
getifaddrs = ["dep:getifaddrs"]
fast-puller = ["reqwest"]
reqwest-tls = ["reqwest/default-tls"]

# 来自 fast-pull
file = ["fast-pull/file"]
mem = ["fast-pull/mem"]

[lints]
workspace = true
