[package]
name = "fast-io"
version = "0.0.1"
edition.workspace = true
license.workspace = true
homepage.workspace = true
authors = ["share121 <2854631158@qq.com>", "Cyan Changes <contact@cyans.me>"]
readme = "README.md"
description = "Fast IO Multiplex and Demultiplex library"
documentation = "https://docs.rs/fast-io"
keywords = ["performance", "multiplex", "fast", "parallel", "concurrency"]
categories = ["concurrency", "asynchronous", "no-std"]

[dependencies]
tokio = { version = "1.47.1", features = [
    "macros",
    "io-util",
], default-features = false }
kanal = "0.1.1"
fast-steal.workspace = true
thiserror.workspace = true
bytes.workspace = true
futures.workspace = true
mmap-io = { version = "0.8.0", features = ["async", "hugepages"] }
reqwest = { version = "0.12.22", features = [
    "stream",
], default-features = false, optional = true }
url = { workspace = true, optional = true }
content_disposition = { version = "0.4.0", optional = true }
sanitize-filename = { version = "0.6.0", optional = true }
urlencoding = { version = "2.1.3", optional = true }

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.20.0"

[features]
default = ["file", "reqwest"]

file = ["memmap2"]
memmap2 = []

reqwest = [
    "url",
    "dep:reqwest",
    "dep:content_disposition",
    "dep:sanitize-filename",
    "dep:urlencoding",
]
"url" = ["dep:url"]
