[package]
name = "fast-pull"
version = "3.5.1"
authors.workspace = true
edition.workspace = true
description = "Pull everything fast"
documentation = "https://docs.rs/fast-pull"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["concurrency", "fast", "multiplex", "parallel", "performance"]
categories = ["asynchronous", "concurrency", "no-std"]

[dependencies]
bytes.workspace = true
fast-steal.workspace = true
futures.workspace = true
kanal.workspace = true
mmap-io = { version = "0.9.0", features = [
  "async",
  "hugepages",
], optional = true }
spin.workspace = true
tokio = { version = "1.47.1", default-features = false, features = [
  "io-util",
  "macros",
  "time",
] }

[dev-dependencies]
tempfile = "3.20.0"

[features]
default = ["file", "mem"]
file = ["dep:mmap-io"]
mem = []
