[package]
name = "fast-pull"
version = "3.7.3"
authors.workspace = true
edition.workspace = true
description = "Pull everything fast"
documentation = "https://docs.rs/fast-pull"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["concurrency", "fast", "multiplex", "parallel", "performance"]
categories = ["asynchronous", "concurrency", "no-std"]

[dependencies]
bytes.workspace = true
crossfire.workspace = true
fast-steal.workspace = true
futures.workspace = true
mmap-io = { version = "0.9.4", features = ["hugepages"], optional = true }
parking_lot.workspace = true
tokio = { version = "1.49.0", default-features = false, features = [
  "macros",
  "rt",
  "sync",
  "time"
] }

[dev-dependencies]
tempfile = "3.25.0"
tokio = { version = "1.49.0", default-features = false, features = [
  "io-util",
] }

[features]
default = ["file", "mem"]
file = ["dep:mmap-io", "tokio/fs"]
mem = []
