[package]
name = "fast-pull"
version = "4.0.2"
authors.workspace = true
edition.workspace = true
description = "Pull everything fast"
documentation = "https://docs.rs/fast-pull"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["concurrency", "fast", "multiplex", "parallel", "performance"]
categories = ["asynchronous", "concurrency", "no-std"]

[dependencies]
bytes.workspace = true
crossfire.workspace = true
fast-steal.workspace = true
futures.workspace = true
memmap2 = { version = "0.9.10", optional = true }
parking_lot.workspace = true
tokio = { version = "1.51.1", default-features = false, features = [
  "macros",
  "rt",
  "sync",
  "time"
] }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.51.1", default-features = false, features = [
  "io-util",
  "rt-multi-thread",
] }

[features]
file = ["dep:memmap2", "tokio/fs"]
mem = []

[lints]
workspace = true
