[package]
name = "fast-steal"
version = "6.2.0"
authors.workspace = true
edition.workspace = true
description = "特别快的多线程任务调度器，支持超细颗粒度的任务窃取"
documentation = "https://docs.rs/fast-steal"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["concurrency", "no-std", "parallel", "performance", "thread"]
categories = ["concurrency", "no-std"]

[dependencies]
spin.workspace = true

[dev-dependencies]
tokio = { version = "1.47.1", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "sync",
] }
