[package]
name = "fast-down-gui"
version = "1.5.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
description = "超级快的下载器命令行界面"
documentation = "https://docs.rs/fast-down-gui"
homepage = "https://github.com/share121/fast-down"
keywords = ["downloader", "parallel", "thread", "concurrency", "performance"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
fast-down = { workspace = true, features = ["file"] }
clap = { version = "4.5.36", features = ["derive"] }
color-eyre = { workspace = true }
reqwest = { workspace = true }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
path-clean = "1.0.1"
ctrlc = "3.4.6"
url = "2.5.4"
config = "0.15.11"
slint = "1.8.0"

[build-dependencies]
slint-build = "1.8.0"

[[bin]]
name = "fast-down"
path = "src/main.rs"
