[package]
name = "fast-down-gui"
version = "2.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
description = "超级快的下载器命令行界面"
documentation = "https://docs.rs/fast-down-gui"
homepage = "https://github.com/share121/fast-down"
keywords = ["downloader", "parallel", "thread", "concurrency", "performance"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
fast-down = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
path-clean = { workspace = true }
url = { workspace = true }
config = { workspace = true }
mimalloc = { workspace = true }
tokio-rusqlite = { workspace = true }
async-channel = { workspace = true }
slint = "1.12.1"


[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
slint-build = "1.12.1"

[package.metadata.i18n]
available-locales = ["en", "zh-TW", "zh-CN"]
default-locale = "en"

[[bin]]
name = "fast-down"
path = "src/main.rs"
