[package]
name = "fast-down-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
exclude.workspace = true
description = "超级快的下载器核心库的 wasm 版本"
documentation = "https://docs.rs/fast-down"
homepage = "https://github.com/share121/fast-down"
keywords = ["downloader", "parallel", "thread", "concurrency", "performance"]
categories = ["network-programming", "concurrency"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
